# capas

./: .gitignore  Dockerfile  README.rst  alembic.ini  docker-compose-airflow.yml  docker-compose.yml  getjornals.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5657534046ee_create_jornalurl_table.py  8f7167c09cba_create_table.py  cdc208f28317_create_jornalurl_table.py
capas/: colors.py  getjornals.py  models.py  scrape_jornals.py
capas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
images/bola/: abola-15dezembro2021  abola-16dezembro2021  abola-17dezembro2021  abola-19dezembro2021  abola-20dezembro2021  abola-21dezembro2021  abola-23dezembro2021  abola-24dezembro2021
images/ojogo/: ojogo-15dezembro2021  ojogo-16dezembro2021  ojogo-17dezembro2021  ojogo-19dezembro2021  ojogo-20dezembro2021  ojogo-21dezembro2021  ojogo-23dezembro2021
images/record/: record-15dezembro2021  record-16dezembro2021  record-17dezembro2021  record-19dezembro2021  record-20dezembro2021  record-21dezembro2021  record-23dezembro2021
tests/: test_capas.py
