[tool.poetry]
name = "capas"
version = "0.1.0"
description = ""
authors = ["dlimanic <dlimanic@cern.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.4.2"
psycopg2-binary = "^2.8.5"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
